@@ -115,6 +115,9 @@
 #ifndef ETHERTYPE_8021AD
 #define ETHERTYPE_8021AD	0x88a8
 #endif
+#ifndef ETHERTYPE_VNTAG
+#define ETHERTYPE_VNTAG		0x8926
+#endif
 #ifndef	ETHERTYPE_LOOPBACK
 #define ETHERTYPE_LOOPBACK	0x9000
 #endif
